--- a/projeto-spotify/index.html
+++ b/projeto-spotify/index.html
@@ -62,26 +62,50 @@
     </header><!--Fim do cabeçalho-->
 
    <!--Seção de botões do meio do site-->
-   <section id="home" class="d-flex">
-    <div class="container align-self-center">
-      <div class="row">
+   <section id="home" class="d-flex"><!--home-->
+      <div class="container align-self-center"><!--container-->
+        <div class="row"><!--row-->
+          <div class="col-md-12 capa"><!--Textos Centrais-->
 
-        <div class="col-md-12 capa"><!--Textos Centrais-->
+            <div id="carousel-spotify" class="carousel slide" data-ride="carousel">
+              <div class="carousel-inner"><!--inner-->
 
-          <h1>Música para todos</h1>
+                <div class="carousel-item active">
+                  <h1>Música para todos</h1>
+                  <a href="" class="btn btn-lg btn-custom btn-roxo">
+                    Aproveite o Spotify Free
+                  </a>
 
-          <a href="" class="btn btn-lg btn-custom btn-roxo">
-            Aproveite o Spotify Free
-          </a>
+                  <a href="" class="btn btn-lg btn-custom btn-branco">
+                    Obter Spotify Premium
+                  </a> 
+                </div>
 
-          <a href="" class="btn btn-lg btn-custom btn-branco">
-            Obter Spotify Premium
-          </a>
+                <div class="carousel-item">
+                  <h1>As melhores rádios</h1>
 
-        </div>
-      </div>
-    </div>     
-   </section>
+                  <a href="" class="btn btn-lg btn-custom btn-branco">
+                    <i class="fas fa-music"></i> Ouça agora
+                  </a> 
+                </div>
+
+              </div><!--inner-->
+              
+              <!--Controles-->
+              <a href="#carousel-spotify" class="carousel-control-prev" data-slide="prev">
+                <i class="fas fa-angle-left fa-3x"></i>
+              </a>
+
+              <a href="#carousel-spotify" class="carousel-control-next" data-slide="next">
+                <i class="fas fa-angle-right fa-3x"></i>
+              </a>
+            
+            </div>  
+
+          </div><!--Textos Centrais-->
+        </div><!--row-->
+      </div><!--container-->
+    </section><!--home-->
 
    <!--Seção de Fotos e textos do meio do site-->
    <section id="servicos" class="caixa">
